# pydatatom

./: .gitignore  README.md  pyproject.toml  test_spot_sum.py
examples/: spot_sum_example.py
notebooks/: 1 Dataset.ipynb  2 Mean Image Evaluation.ipynb  2 Pipeline.ipynb  3 Fixed Spot Detection  Evaluation.ipynb  3 Measurement.ipynb  4 Fixed Spot Histogram Evaluation.ipynb  5 Spectroscopy Evaluation.ipynb  development.ipynb
notebooks/.ipynb_checkpoints/: 2 Mean Image Evaluation-checkpoint.ipynb  development-checkpoint.ipynb
pydatatom/: __init__.py  evaluation.py
pydatatom/analysis/: __init__.py  aggregate.py  lifetime.py  rabiosc.py  resonance.py
pydatatom/analysis/image/: __init__.py
pydatatom/dataset/: __init__.py  combine.py  dataset.py  gzip_pickle.py  transform.py
pydatatom/datasets/: __init__.py  dataset.py  glob.py
pydatatom/detector/: __init__.py
pydatatom/detector/curve/: __init__.py  detector.py
pydatatom/detectors/: __init__.py
pydatatom/detectors/curve/: gaussian.py
pydatatom/measurement/: __init__.py  measurement.py  spectroscopy.py
pydatatom/pipeline/: __init__.py  pipeline.py
pydatatom/pipeline/step/: __init__.py  atom_count.py  atom_crop.py  atom_stats.py  image_mean.py  (+2 more)
pydatatom/pipelines/: __init__.py  pipeline.py  step.py  transform.py
pydatatom/transform/: __init__.py  compose.py  drop_keys.py  pick_key.py  pick_type.py  point_crop.py
pydatatom/transforms/: __init__.py  point_crop.py
pyeval/: __init__.py  aggregator.py  dataset.py  evaluation.py  evaluator.py  transform.py
pyeval/analysis/: __init__.py  models.py
(+17 files in other folders)
