[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeval"
version = "0.1.0"
authors = [
    { name = "Bodo Kaiser", email = "bodo.kaiser@physik.uni-muenchen.de" },
]
dependencies = ["numpy==2.1.3", "scipy==1.16.1"]

[tool.setuptools.packages.find]
where = ["pyeval"]
