[build-system]
requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeval"
dynamic = ["version"]
authors = [
    { name = "Bodo Kaiser", email = "bodo.kaiser@physik.uni-muenchen.de" },
]
dependencies = ["numpy==2.1.3", "scipy==1.16.1", "lmfit==1.3.4", "torch==2.8.0"]
requires-python = ">= 3.9"

[dependency-groups]
matplotlib = ["matplotlib>=3.10.5"]
jupyterlab = [
    "jupyterlab>=4.4.5",
    "ipympl>=0.9.7",
    { include-group = "matplotlib" },
]

[tool.setuptools.packages.find]
where = ["pyeval"]

[tool.setuptools-git-versioning]
enabled = true
